--- a/viewplay/src/main/res/values/strings.xml
+++ b/viewplay/src/main/res/values/strings.xml
@@ -75,9 +75,9 @@
     <string name="cancel">取消</string>
     <string name="title_alert">alert</string>
 
-    <string name="tips_not_wifi">您当前正在使用移动网络，是否继续播放</string>
+    <string name="tips_not_wifi">正在使用非wifi网络，播放将产生流量</string>
     <string name="tips_not_wifi_confirm">继续播放</string>
-    <string name="tips_not_wifi_cancel">停止播放</string>
+    <string name="tips_not_wifi_cancel">取消播放</string>
     <string name="no_url">No mUrl</string>
 
 
